--- a/note_Srinath_C0741052/note_Srinath_C0741052/Info.plist
+++ b/note_Srinath_C0741052/note_Srinath_C0741052/Info.plist
@@ -18,6 +18,10 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Note app wants to take pictures.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Note app wants to use your photos.</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSceneManifest</key>
