Added audio permissions

--- a/note_Srinath_C0741052/note_Srinath_C0741052/Info.plist
+++ b/note_Srinath_C0741052/note_Srinath_C0741052/Info.plist
@@ -20,6 +20,8 @@
 	<string>Notes requires your location to show notes details</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Notes required your microphone to record audio in note</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSCameraUsageDescription</key>
